--- a/pages/imitate/school/major/major.wxml
+++ b/pages/imitate/school/major/major.wxml
@@ -3,14 +3,14 @@
 <view class="page">
     <view class="page__bd">
       <block wx:for="{{major}}" wx:key="">
-      <view class="weui-cells weui-cells_after-title" bindtap="major" id="{{item.DIC_ID}}">
+      <view class="weui-cells weui-cells_after-title" bindtap="selMajor" id="{{item.MAJOR_ID}}" hidden ="{{item.checked}}">
             <view class="weui-cell">
-                <view class="weui-cell__bd ">{{item.NAME}}</view>
-                <view class="weui-cell__ft" wx:if="{{item.checked}}">√</view>
-                <view class="weui-cell__ft" wx:if="{{!item.checked}}"></view>
+                <view class="weui-cell__bd ">{{item.MAJORNAME}}</view>
+                <!-- <view class="weui-cell__ft" wx:if="{{item.checked}}">√</view> -->
+                <!-- <view class="weui-cell__ft" wx:if="{{!item.checked}}"></view> -->
             </view>
         </view>
     </block>
-    </view>   
+    </view>
 </view>
 <view class='white'></view>
