--- a/pages/teacher/issue_content/issue_content.wxml
+++ b/pages/teacher/issue_content/issue_content.wxml
@@ -3,56 +3,65 @@
 <view class="page">
   <view class='page_bd'>
     <view class="weui-panel">
-      <view wx:if="{{ask.length == 0}}">
+      <view wx:if="{{list.length == 0}}">
         
       </view>
-      <view class="weui-panel__bd" wx:for="{{ask}}" wx:key="">
+      <view class="weui-panel__bd" wx:for="{{list}}" wx:key="">
+
+				<view hidden='{{!item.ASK_CONTENT}}'>
           <view class="weui-media-box weui-media-box_small-appmsg">
-              <view class="weui-cells weui-cells_in-small-appmsg">
-                  <view class="weui-cell weui-cell_access">
-                      <view class="weui-cell__hd"><image src="{{item.HEADURL}}" style="width: 50rpx;height: 50rpx;margin-right: 5px;border-radius:50%"  /></view>
-                      <view class="weui-cell__bd weui-cell_primary">
-                          <view>{{item.USERNAME}}  <text class='time'>{{item.CREATETIME}}</text></view>
-                      </view>
-                  </view>
-              </view>
+						<view class="weui-cells weui-cells_in-small-appmsg">
+							<view class="weui-cell weui-cell_access">
+								<view class="weui-cell__hd">
+									<image src="{{item.HEADURL_STU}}"
+										style="width: 50rpx;height: 50rpx;margin-right: 5px;border-radius:50%"  /></view>
+								<view class="weui-cell__bd weui-cell_primary">
+									<view>{{item.NICKNAME_STU}}  <text class='time'>{{item.CREATETIME}}</text></view>
+								</view>
+							</view>
+						</view>
           </view>
           <view class="weui-media-box weui-media-box_text">
-              <view class="weui-media-box__title weui-media-box__title_in-text">{{item.CONTENT}}</view>
+						<view class="weui-media-box__title weui-media-box__title_in-text">{{item.ASK_CONTENT}}</view>
           </view>
-          <view class="weui-panel__ft">
-              <button class="weui-btn mini-btn" type="primary" size="mini" bindtap="answer" hidden="{{hidden}}">问题回复</button>
-          </view>
+				</view>
+          
+				<view hidden='{{!item.ANSWER_CONTENT}}'>
+					<view class="weui-media-box weui-media-box_small-appmsg">
+						<view class="weui-cells weui-cells_in-small-appmsg">
+							<view class="weui-cell weui-cell_access">
+								<view class="weui-cell__hd" style='margin-left: 30rpx;'>
+									<image src="{{item.HEADURL_PRO}}"
+										style="width: 50rpx;height: 50rpx;margin-right: 5px;border-radius:50%"/>
+								</view>
+								<view class="weui-cell__bd weui-cell_primary">
+									<view>{{item.NICKNAME_PRO}}  <text class='time'>{{item.CREATETIME}}</text></view>
+								</view>
+							</view>
+						</view>
+					</view>
+					<view class="weui-media-box weui-media-box_text" style='margin-left: 30rpx;'>
+						<view class="weui-media-box__title weui-media-box__title_in-text">{{item.ANSWER_CONTENT}}</view>
+					</view>
+				</view>
+
+				<view class="weui-panel__ft" style='position:relative'
+					hidden="{{!(role == 'sja4gc59bg' && item.STU_ID && item.PRO_ID && index == list.length - 1)}}">
+					<textarea style='text-align: left; padding: 15rpx 20rpx;' bindinput='bindContent'></textarea>
+					<button class="weui-btn mini-btn" type="primary" size="mini" bindtap='postQuestionAgain'
+							style='background-color:#5AB4AA; position:absolute;bottom:0rpx;right:20rpx'>追问
+					</button>
+				</view>
+
+				<view class="weui-panel__ft" style='position:relative'
+					hidden="{{!(role == 'wophbzohkh' && !item.PRO_ID)}}">
+					<textarea style='text-align: left; padding: 15rpx 20rpx;' bindinput='bindContent'></textarea>
+					<button class="weui-btn mini-btn" type="primary" size="mini" bindtap='postAnswerAgain'
+							style='background-color:#5AB4AA; position:absolute;bottom:0rpx;right:20rpx'>追答
+					</button>
+				</view>
       </view>
     </view>
-    <view class="answer">{{answer.length}}条回答<text style="color:rgb(90,180,170)">（点击老师头像可查看老师详细资料）</text></view>
-    <view wx:if="{{answer.length == 0}}" class="expert_none">
-      <image src="/images/expert.png" style="width:400rpx;height:200rpx;"></image>
-      <text style="margin-top:30rpx;color:#ff6767">专家正在拼命赶来回复您！请稍后！</text>
-    </view>
-    <view class="weui-panel" wx:for="{{answer}}" wx:key="">
-      <view class="weui-panel__bd" >
-          <view class="weui-media-box weui-media-box_small-appmsg" bindtap="introduce" id="{{item.USER_ID}}">
-              <view class="weui-cells weui-cells_in-small-appmsg">
-                  <view class="weui-cell weui-cell_access">
-                      <view class="weui-cell__hd"><image src="{{item.HEADURL}}" style="width: 50rpx;height: 50rpx;margin-right: 5px;border-radius:50%" /></view>
-                      <view class="weui-cell__bd weui-cell_primary">
-                            <text>{{item.USERNAME}}</text>  
-                            <text class='time'>{{item.CREATETIME}}</text>
-                            <!-- <image src="/images/spot.png" style="height:30rpx;width:30rpx;margin-left:50rpx"></image>
-                            <text style="margin-left:10rpx">{{item.ZAN}}</text> -->
-                      </view>
-                  </view>
-              </view>
-          </view>
-          <view class="weui-media-box weui-media-box_text">
-              <view class="weui-media-box__desc" style='font-size:16px'>{{item.CONTENT}}</view>
-          </view>
-          <view class="weui-panel__ft">
-              <button class="weui-btn mini-btn" type="primary" size="mini" hidden="{{hidden}}" id="{{item.ANSWER_ID}}" bindtap="answerDelete">删除</button>
-          </view>
-        </view>
-      </view>
-  </view>
+	</view>
 </view>
 <view class='white'></view>
