--- a/pages/person/improve/improve.wxml
+++ b/pages/person/improve/improve.wxml
@@ -18,3 +18,24 @@
   </view>
   <view class='btn' bindtap='pay' id="5000"><text class='text'>立即购买</text></view>
 </view>
+
+<view wx:if="{{id == 4}}">
+<form bindsubmit="cardUp">
+	<view class="weui-cells__title">激活会员卡</view>
+	<view class="weui-cells weui-cells_after-title">
+		<view class="weui-cell weui-cell_input">
+			<view class="weui-cell__bd">
+				<input class="weui-input" name='NUMBER' value='{{NUMBER}}' placeholder="请输入15位卡号" />
+			</view>
+		</view>
+		<view class="weui-cell weui-cell_input">
+			<view class="weui-cell__bd">
+				<input class="weui-input" name='PASSWORD' value='{{PASSWORD}}' placeholder="请输入激活码" />
+			</view>
+		</view>
+	</view>
+	<view class="weui-btn-area">
+		<button class="weui-btn" type="primary" formType="submit">确定</button>
+	</view>
+</form>
+</view>
