--- a/pages/person/improve/improve.wxss
+++ b/pages/person/improve/improve.wxss
@@ -38,6 +38,9 @@ page{
   padding:20rpx 0;
   color:rgb(228,119,36);
   border-radius: 10rpx;
+  position: absolute;
+  bottom: 40rpx;
+  left: 0;
 }
 .text2{
   width:90%;
