--- a/pages/teacher/teacher.wxml
+++ b/pages/teacher/teacher.wxml
@@ -4,6 +4,7 @@
   <image src='{{consultation}}' style="width: 100%;height: 100%;"></image>
 </view>
 <view class="page">
+
     <view class="page__bd">
       <view class="weui-tab">
         <view class="weui-navbar">
@@ -68,20 +69,19 @@
           <view class='white'></view>
       </view>
       <view class="weui-tab__content" hidden="{{activeIndex != 1}}">
-        <view class="weui-panel weui-panel_access" wx:for="{{experts}}" wx:key="" id="{{item.USER_ID}}" bindtap="expertContent">
-          <view class="weui-panel__bd">
-            <view class="weui-media-box weui-media-box_appmsg" hover-class="weui-cell_active">
-                <view class="weui-media-box__hd weui-media-box__hd_in-appmsg">
-                    <image class="weui-media-box__thumb" src="{{item.HEADURL}}" />
+        <view class="weui-panel weui-panel_access">
+            <view class="weui-panel__hd">专家列表</view>
+            <view class="weui-panel__bd">
+                <view class="weui-cell" wx:for="{{ex_list}}" wx:key="index" bindtap='toPay' id='{{item.USER_ID}}' data-nickname='{{item.NICKNAME}}' data-headurl='{{item.HEADURL}}'>
+                    <view class="weui-cell__hd" style="position: relative;margin-right: 10px;">
+                        <image src="{{item.headurl}}" style="width: 50px; height: 50px; display: block"/>
+                    </view>
+                    <view class="weui-cell__bd">
+                        <view>{{item.NICKNAME}}</view>
+                        <view style="font-size: 13px;color: #888888;">专家</view>
+                    </view>
                 </view>
-                <view class="weui-media-box__bd weui-media-box__bd_in-appmsg">
-                    <view class="weui-media-box__title">{{item.NICKNAME}} <text class='atte' >认证</text></view>
-                    <view class="weui-media-box__desc" style='font-size: 16px;'>{{item.INTRODUCTION}}</view>
-                    
-                </view>
-                <view class="weui-cell__ft weui-cell__ft_in-access"></view>
             </view>
-          </view>
         </view>
       </view>
     </view>
